generated/NoSqlParser.py
# Generated from /home/antonio/Downloads/PARCIAL_LP/grammar/NoSql.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NoSqlParser ( Parser ):

    grammarFileName = "NoSql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'CREATE'", "'COLLECTION'", "'INSERT'", 
                     "'INTO'", "'FIND'", "'UPDATE'", "'SET'", "'DELETE'", 
                     "'FROM'", "'SHOW'", "'COLLECTIONS'", "'WHERE'", "'OR'", 
                     "'AND'", "<INVALID>", "'null'", "'=='", "'!='", "'<='", 
                     "'>='", "'<'", "'>'", "'='", "':'", "','", "';'", "'('", 
                     "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "CREATE", "COLLECTION", "INSERT", "INTO", 
                      "FIND", "UPDATE", "SET", "DELETE", "FROM", "SHOW", 
                      "COLLECTIONS", "WHERE", "OR", "AND", "BOOLEAN", "NULL", 
                      "EQ", "NEQ", "LTE", "GTE", "LT", "GT", "EQUAL", "COLON", 
                      "COMMA", "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "IDENTIFIER", "NUMBER", "STRING", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_createCollectionStatement = 2
    RULE_insertStatement = 3
    RULE_findStatement = 4
    RULE_updateStatement = 5
    RULE_deleteStatement = 6
    RULE_showCollectionsStatement = 7
    RULE_whereClause = 8
    RULE_assignmentList = 9
    RULE_assignment = 10
    RULE_objectLiteral = 11
    RULE_pair = 12
    RULE_expression = 13
    RULE_orExpr = 14
    RULE_andExpr = 15
    RULE_equalityExpr = 16
    RULE_relationalExpr = 17
    RULE_primary = 18
    RULE_literal = 19

    ruleNames =  [ "program", "statement", "createCollectionStatement", 
                   "insertStatement", "findStatement", "updateStatement", 
                   "deleteStatement", "showCollectionsStatement", "whereClause", 
                   "assignmentList", "assignment", "objectLiteral", "pair", 
                   "expression", "orExpr", "andExpr", "equalityExpr", "relationalExpr", 
                   "primary", "literal" ]

    EOF = Token.EOF
    CREATE=1
    COLLECTION=2
    INSERT=3
    INTO=4
    FIND=5
    UPDATE=6
    SET=7
    DELETE=8
    FROM=9
    SHOW=10
    COLLECTIONS=11
    WHERE=12
    OR=13
    AND=14
    BOOLEAN=15
    NULL=16
    EQ=17
    NEQ=18
    LTE=19
    GTE=20
    LT=21
    GT=22
    EQUAL=23
    COLON=24
    COMMA=25
    SEMI=26
    LPAREN=27
    RPAREN=28
    LBRACE=29
    RBRACE=30
    IDENTIFIER=31
    NUMBER=32
    STRING=33
    LINE_COMMENT=34
    BLOCK_COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(NoSqlParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NoSqlParser.StatementContext)
            else:
                return self.getTypedRuleContext(NoSqlParser.StatementContext,i)


        def getRuleIndex(self):
            return NoSqlParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = NoSqlParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1386) != 0):
                self.state = 40
                self.statement()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(NoSqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createCollectionStatement(self):
            return self.getTypedRuleContext(NoSqlParser.CreateCollectionStatementContext,0)


        def SEMI(self):
            return self.getToken(NoSqlParser.SEMI, 0)

        def insertStatement(self):
            return self.getTypedRuleContext(NoSqlParser.InsertStatementContext,0)


        def findStatement(self):
            return self.getTypedRuleContext(NoSqlParser.FindStatementContext,0)


        def updateStatement(self):
            return self.getTypedRuleContext(NoSqlParser.UpdateStatementContext,0)


        def deleteStatement(self):
            return self.getTypedRuleContext(NoSqlParser.DeleteStatementContext,0)


        def showCollectionsStatement(self):
            return self.getTypedRuleContext(NoSqlParser.ShowCollectionsStatementContext,0)


        def getRuleIndex(self):
            return NoSqlParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = NoSqlParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.createCollectionStatement()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 49
                    self.match(NoSqlParser.SEMI)


                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.insertStatement()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 53
                    self.match(NoSqlParser.SEMI)


                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.findStatement()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 57
                    self.match(NoSqlParser.SEMI)


                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.updateStatement()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 61
                    self.match(NoSqlParser.SEMI)


                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 64
                self.deleteStatement()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 65
                    self.match(NoSqlParser.SEMI)


                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 68
                self.showCollectionsStatement()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 69
                    self.match(NoSqlParser.SEMI)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateCollectionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(NoSqlParser.CREATE, 0)

        def COLLECTION(self):
            return self.getToken(NoSqlParser.COLLECTION, 0)

        def IDENTIFIER(self):
            return self.getToken(NoSqlParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return NoSqlParser.RULE_createCollectionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateCollectionStatement" ):
                listener.enterCreateCollectionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateCollectionStatement" ):
                listener.exitCreateCollectionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateCollectionStatement" ):
                return visitor.visitCreateCollectionStatement(self)
            else:
                return visitor.visitChildren(self)




    def createCollectionStatement(self):

        localctx = NoSqlParser.CreateCollectionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createCollectionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(NoSqlParser.CREATE)
            self.state = 75
            self.match(NoSqlParser.COLLECTION)
            self.state = 76
            self.match(NoSqlParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(NoSqlParser.INSERT, 0)

        def INTO(self):
            return self.getToken(NoSqlParser.INTO, 0)

        def IDENTIFIER(self):
            return self.getToken(NoSqlParser.IDENTIFIER, 0)

        def objectLiteral(self):
            return self.getTypedRuleContext(NoSqlParser.ObjectLiteralContext,0)


        def getRuleIndex(self):
            return NoSqlParser.RULE_insertStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStatement" ):
                listener.enterInsertStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStatement" ):
                listener.exitInsertStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsertStatement" ):
                return visitor.visitInsertStatement(self)
            else:
                return visitor.visitChildren(self)




    def insertStatement(self):

        localctx = NoSqlParser.InsertStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_insertStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(NoSqlParser.INSERT)
            self.state = 79
            self.match(NoSqlParser.INTO)
            self.state = 80
            self.match(NoSqlParser.IDENTIFIER)
            self.state = 81
            self.objectLiteral()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FindStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIND(self):
            return self.getToken(NoSqlParser.FIND, 0)

        def IDENTIFIER(self):
            return self.getToken(NoSqlParser.IDENTIFIER, 0)

        def whereClause(self):
            return self.getTypedRuleContext(NoSqlParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return NoSqlParser.RULE_findStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFindStatement" ):
                listener.enterFindStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFindStatement" ):
                listener.exitFindStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFindStatement" ):
                return visitor.visitFindStatement(self)
            else:
                return visitor.visitChildren(self)




    def findStatement(self):

        localctx = NoSqlParser.FindStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_findStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(NoSqlParser.FIND)
            self.state = 84
            self.match(NoSqlParser.IDENTIFIER)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 85
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(NoSqlParser.UPDATE, 0)

        def IDENTIFIER(self):
            return self.getToken(NoSqlParser.IDENTIFIER, 0)

        def SET(self):
            return self.getToken(NoSqlParser.SET, 0)

        def assignmentList(self):
            return self.getTypedRuleContext(NoSqlParser.AssignmentListContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(NoSqlParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return NoSqlParser.RULE_updateStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateStatement" ):
                listener.enterUpdateStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateStatement" ):
                listener.exitUpdateStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdateStatement" ):
                return visitor.visitUpdateStatement(self)
            else:
                return visitor.visitChildren(self)




    def updateStatement(self):

        localctx = NoSqlParser.UpdateStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_updateStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(NoSqlParser.UPDATE)
            self.state = 89
            self.match(NoSqlParser.IDENTIFIER)
            self.state = 90
            self.match(NoSqlParser.SET)
            self.state = 91
            self.assignmentList()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 92
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(NoSqlParser.DELETE, 0)

        def FROM(self):
            return self.getToken(NoSqlParser.FROM, 0)

        def IDENTIFIER(self):
            return self.getToken(NoSqlParser.IDENTIFIER, 0)

        def whereClause(self):
            return self.getTypedRuleContext(NoSqlParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return NoSqlParser.RULE_deleteStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeleteStatement" ):
                listener.enterDeleteStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeleteStatement" ):
                listener.exitDeleteStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeleteStatement" ):
                return visitor.visitDeleteStatement(self)
            else:
                return visitor.visitChildren(self)




    def deleteStatement(self):

        localctx = NoSqlParser.DeleteStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_deleteStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(NoSqlParser.DELETE)
            self.state = 96
            self.match(NoSqlParser.FROM)
            self.state = 97
            self.match(NoSqlParser.IDENTIFIER)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 98
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowCollectionsStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(NoSqlParser.SHOW, 0)

        def COLLECTIONS(self):
            return self.getToken(NoSqlParser.COLLECTIONS, 0)

        def getRuleIndex(self):
            return NoSqlParser.RULE_showCollectionsStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowCollectionsStatement" ):
                listener.enterShowCollectionsStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowCollectionsStatement" ):
                listener.exitShowCollectionsStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowCollectionsStatement" ):
                return visitor.visitShowCollectionsStatement(self)
            else:
                return visitor.visitChildren(self)




    def showCollectionsStatement(self):

        localctx = NoSqlParser.ShowCollectionsStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_showCollectionsStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(NoSqlParser.SHOW)
            self.state = 102
            self.match(NoSqlParser.COLLECTIONS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(NoSqlParser.WHERE, 0)

        def expression(self):
            return self.getTypedRuleContext(NoSqlParser.ExpressionContext,0)


        def getRuleIndex(self):
            return NoSqlParser.RULE_whereClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereClause" ):
                listener.enterWhereClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereClause" ):
                listener.exitWhereClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereClause" ):
                return visitor.visitWhereClause(self)
            else:
                return visitor.visitChildren(self)




    def whereClause(self):

        localctx = NoSqlParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whereClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(NoSqlParser.WHERE)
            self.state = 105
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NoSqlParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(NoSqlParser.AssignmentContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(NoSqlParser.COMMA)
            else:
                return self.getToken(NoSqlParser.COMMA, i)

        def getRuleIndex(self):
            return NoSqlParser.RULE_assignmentList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentList" ):
                listener.enterAssignmentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentList" ):
                listener.exitAssignmentList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentList" ):
                return visitor.visitAssignmentList(self)
            else:
                return visitor.visitChildren(self)




    def assignmentList(self):

        localctx = NoSqlParser.AssignmentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignmentList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.assignment()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 108
                self.match(NoSqlParser.COMMA)
                self.state = 109
                self.assignment()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(NoSqlParser.IDENTIFIER, 0)

        def EQUAL(self):
            return self.getToken(NoSqlParser.EQUAL, 0)

        def expression(self):
            return self.getTypedRuleContext(NoSqlParser.ExpressionContext,0)


        def getRuleIndex(self):
            return NoSqlParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = NoSqlParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(NoSqlParser.IDENTIFIER)
            self.state = 116
            self.match(NoSqlParser.EQUAL)
            self.state = 117
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(NoSqlParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(NoSqlParser.RBRACE, 0)

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NoSqlParser.PairContext)
            else:
                return self.getTypedRuleContext(NoSqlParser.PairContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(NoSqlParser.COMMA)
            else:
                return self.getToken(NoSqlParser.COMMA, i)

        def getRuleIndex(self):
            return NoSqlParser.RULE_objectLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectLiteral" ):
                listener.enterObjectLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectLiteral" ):
                listener.exitObjectLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectLiteral" ):
                return visitor.visitObjectLiteral(self)
            else:
                return visitor.visitChildren(self)




    def objectLiteral(self):

        localctx = NoSqlParser.ObjectLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_objectLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(NoSqlParser.LBRACE)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 120
                self.pair()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==25:
                    self.state = 121
                    self.match(NoSqlParser.COMMA)
                    self.state = 122
                    self.pair()
                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 130
            self.match(NoSqlParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(NoSqlParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(NoSqlParser.COLON, 0)

        def expression(self):
            return self.getTypedRuleContext(NoSqlParser.ExpressionContext,0)


        def getRuleIndex(self):
            return NoSqlParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = NoSqlParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(NoSqlParser.IDENTIFIER)
            self.state = 133
            self.match(NoSqlParser.COLON)
            self.state = 134
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(NoSqlParser.OrExprContext,0)


        def getRuleIndex(self):
            return NoSqlParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = NoSqlParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NoSqlParser.AndExprContext)
            else:
                return self.getTypedRuleContext(NoSqlParser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(NoSqlParser.OR)
            else:
                return self.getToken(NoSqlParser.OR, i)

        def getRuleIndex(self):
            return NoSqlParser.RULE_orExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)




    def orExpr(self):
